$Id$


v0.81.0		07-Oct-2005

	upgrade:
		The bbs menu Change Screenlength is obsolete. Remove this from
		the menus (setup.mnu) and ascii/ansi screens (setup.a??).

	mbcico:
		Made binkp GZ and BZ2 compression final.

	mbsebbs:
		Automatic dynamic detection of the users screensize.
		There is no check anymore for a valid tty with network calls,
		instead a fake ttyinfo record is created. Modem/ISDN and
		console still need a valid configured tty.
		Fixed a bug in the email menu that would let the current
		mailbox disappear.

	mbnewusr:
                There is no check anymore for a valid tty with network calls,
                instead a fake ttyinfo record is created. Modem/ISDN and
                console still need a valid configured tty.

	mbtask:
		Logs program name that locks serial ports.

	mbsetup:
		Removed settings for users screenlength.
		In tty setup the network records are automatic removed. The
		setting for auth log is removed (was never used).

	lang:	Removed prompts 64, 80 and 81.
		Changed prompt 348.
		Added prompt 31.

	examples:
		removed Change Screenlength from the English menus and 
		txtfiles.


v0.80.0		27-Oct-2004 - 06-Oct-2005


		Yes, this release took too long to complete. But there were too
		many problems that a stable release wasn't a good idea.

        general:
                Due to lack of maintainers italian language support is dropped.
                Upgraded to ftscprod.010
                Added port to OpenBSD, is under test (and doesn't work yet).
                Code cleanup so that compile stops on unknown OSes and CPUs
                instead of missing code parts.
                Added Unix codepage KOI8-R (Russian) and patches from Dmitry
                Komissaroff.
                Updated Copyright notices to 2004 to 2005.
                From filetranfer records removed the batch and bidirectional
                switches, these are no longer needed.